<resources>
    <string name="app_name">UpsideDown</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="feed">Feed</string>
    <string name="chats">Chats</string>
    <string name="review">Review</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="item_group1">Find your Workman</string>
    <string name="item_group2">Find your place</string>

    <string name="map">Send location</string>
    <string name="map2">Find location</string>

    <string name="setting">Settings</string>
    <string name="logout">Logout</string>

    <string name="sign_up_text">Dont\'t have an account? Sign Up</string>
    <string name="sign_in_options">Or Sign In with</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="logimi_me_sukses">Jeni loguar me sukses!</string>
    <string name="kredencialet_gabim">Kredencialet jane gabim!</string>
    <string name="settings">Settings</string>
    <string name="report">Report</string>
    <string name="users">Users</string>
    <string name="add_users">Add Users</string>
    <string name="todo">TODO</string>

    <string name="electrician">Electrician</string>
    <string name="plumber">Plumber</string>
    <string name="painter">Painter</string>
    <string name="housekeeper">Housekeeper</string>
    <string name="gardener">Gardener</string>
    <string name="chimneysweep">Chimneysweep</string>
    <string name="mechanic">Mechanic</string>
    <string name="mjeshter">Mjeshter</string>


    <string name="role_prompt">Choose your role</string>

    <string-array name="role">
        <item>User</item>
        <item>Workman</item>
    </string-array>

    <string name="jobPosition_prompt">Choose your job</string>

    <string-array name="Jobpositions">
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Painter</item>
        <item>Housekeeper</item>
        <item>Gardener</item>
        <item>Chimneysweep</item>
        <item>Mechanic</item>
        <item>Mjeshter</item>
    </string-array>

    <string name="one">Very bad!</string>
    <string name="two">Needs some improvements!</string>
    <string name="three">Good!</string>
    <string name="four">Great!</string>
    <string name="five">Awesome, I love it!</string>
    <string name="review_quote">Your words make a difference on our improvement!</string>
    <string name="feedback_title">We hope you enjoyed our work!</string>
    <string name="feedback_error">Please fill in feedback text box, so we can get your opinion!</string>
    <string name="feedback_message">Thank you for sharing your feedback!</string>
    <string name="feedback_text">Share your opinion about us...</string>
    <string name="send_feedback">Send feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infoDescription1">Electricians are more than just the modern superheroes of electricity.
                                   In between power outages, they constantly work on other projects such as rewiring equipment or fixtures,
                                   inspecting electrical components for safety, installing wiring and lighting,
                                   and troubleshooting electrical problems.</string>
    <string name="infoDescription2">Plumbers install, maintain and repair residential and commercial plumbing systems that supply
                                    the property with water and gas and carry away waste. Heating and cooling (HVAC), waste removal,
                                    and potable water delivery are among the most common uses for plumbing,
                                    but it is not limited to these applications.</string>
    <string name="infoDescription3">A painter applies paint and other decorative finishes to interior and exterior surfaces of buildings
                                    and other structures. Some of the main duties of a painter are to: Prepare surfaces to be painted
                                   (includes scraping, removal of wallpaper, etc.). Determine what materials will be needed.</string>
    <string name="infoDescription4">Here are the general duties of a housekeeper: Light cleaning in the living areas. This includes dusting,
                                    vacuuming, sweeping and mopping the floors in all rooms. Cleaning the bathrooms, including mirrors,
                                    toilets, showers and baths.</string>
    <string name="infoDescription5">The gardener is the person who has the skill to maintain the gardens design. The gardeners labor
                                    during the year include planting flowers and other plants, weeding, pruning, grafting, deadheading,
                                    mixing and preparation of insecticides and other products for pest control, and tending garden compost.</string>
    <string name="infoDescription6">The chimney sweep sweeps and cleans chimneys, smoke ducts, flue pipes and fireplaces in order to prevent
                                     soot fires and gas emissions. The chimney sweep also has special skills regarding fire prevention work and
                                     they work closely with the fire department.</string>
    <string name="infoDescription7">A mechanic works on automobiles, trucks, and related transportation and material-moving vehicles.
                                    Some mechanics perform general maintenance and repairs, while others may specialize in tires, brakes, engines,
                                    or on-board computers.</string>
    <string name="infoDescription8">Mjeshter...</string>

    <string name="register">Register</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="x">X</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="photo">Photo</string>
    <string name="app_history">App history</string>
    <string name="activity_log">Activity log</string>
    <string name="get_app_history">Get app history</string>
</resources>
