<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".review.ReviewFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/review_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/etFeedback"
            app:layout_constraintTop_toTopOf="@+id/etFeedback">

            <TextView
                android:id="@+id/feedback_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/feedback_title"
                android:textSize="@dimen/review_text_size"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/etFeedback"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/etFeedback"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/review_margin_top"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="@+id/feedback_title"
                app:layout_constraintStart_toStartOf="@+id/feedback_title"
                app:layout_constraintTop_toBottomOf="@+id/feedback_title" />

            <TextView
                android:id="@+id/tvRatingScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/review_margin_top"
                android:text="@string/five"
                android:textSize="@dimen/review_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar"
                app:layout_constraintStart_toStartOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <EditText
                android:id="@+id/etFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/review_margin_top"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/feedback_text"
                android:inputType="textMultiLine"
                android:lines="5"
                app:layout_constraintBottom_toTopOf="@+id/feedback_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRatingScale"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/feedback_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/review_margin_top"
                android:background="#0a1c20"
                android:text="@string/send_feedback"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/etFeedback"
                app:layout_constraintStart_toStartOf="@+id/etFeedback" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>